firstscreen section done

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,22 @@
 
             </div>
         </header>
+
+        <section class="firstscreen">
+            <div class="container">
+                <h1 class="title firstscreen-title">Survival</h1>
+                <div class="descr firstscreen-descr">
+                    <p>
+                        What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.
+                    </p>
+                </div>
+                <a href="#" class="firstscreen-link btn">Donate</a>
+            </div>
+        </section>
     </div>
-    
 
 
-    <script src="./js/script.js"></script>
+   <script src="./js/script.js"></script>
     
 </body>
 </html>
