add button instead link in header and fullscreen

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,9 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="header-nav__menu_item btn btn_transparent">
-                            <a href="#" class="header-nav__menu_link">Sign in</a>
+                        <li class="header-nav__menu_item">
+                            <button class="header-nav__menu_link btn btn_transparent"> Sign in </button>
+                            <!-- <a href="#" class="header-nav__menu_link">Sign in</a> -->
                         </li>
                     </ul>
                 </nav>
