sart of slider section

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wildlife</title>
+    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+     -->
     <link rel="stylesheet" href="./css/style.min.css">
 
 </head>
@@ -57,8 +59,38 @@
         </section>
     </div>
 
+    <section class="news">
+        <div class="container">
+            <h2 class="news-title">Latest articles</h2>
+            <div class="subtitle">Breaking news from the wild</div>
+            <div class="news-slider">
+                <div class="news-slider__item">
+                    <div class="news-slider__img">
+                        <img src="./img/slider/slide1.jpg" alt="slide1">
+                    </div> 
+                    <div class="news-slider__text">
+                        <h4 class="news-item__img_title">Deer</h4>
+                        <div class="news-item__img_subtitle">Naturalist investigation</div>
+                    </div>
+                </div>
+                <div class="news-slider__item">
+                    <img src="./img/slider/slide2.jpg" alt="slide2" class="news-item__img">
+                    <h4 class="news-item__img_title">Squirrel</h4>
+                    <div class="news-item__img_subtitle">Kamikaze squirrels</div>
+                </div>
+                <div class="news-slider__item">
+                    <img src="./img/slider/slide3.jpg" alt="slide3" class="news-item__img">
+                    <h4 class="news-item__img_title">Bird</h4>
+                    <div class="news-item__img_subtitle">Birds Fight club</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-   <script src="./js/script.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+     -->
+    <script src="./js/script.js"></script>
     
 </body>
 </html>
